<resources>
    <string name="app_name">Twits</string>
    <string name="signin_title">Signin</string>
    <string name="usernameEmailValue">Username/Email</string>
    <string name="passwordValue">Password</string>
    <string name="loginValue">Login</string>
    <string name="account_text">Don\'t have an account yet?</string>
    <string name="signup_login_button">Signup</string>
    <string name="signup_welcome">Welcome to signup</string>
    <string name="first_name_value">First Name</string>
    <string name="second_name_value">Second Name</string>
    <string name="email_value">Email</string>
    <string name="confirm_password_value">Confirm Password</string>
    <string name="signup_Value">Signup</string>
    <string name="member_text">Already a member?</string>
    <string name="signin_button">Signin</string>
    <string name="required">Required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_information_title">Set up user information</string>
    <string name="preferred_username">Set your preferred username</string>
    <string name="tap_for_profile_picture">Tap to here to pick profile picture</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="myusername_placeholder">myUserName</string>
    <string name="twit_text_placeholder">Hello</string>
    <string name="loading_text">Loading...</string>

</resources>