<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0.2dp"
    app:cardElevation="0.5dp"
    android:padding="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_profile_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/image_thumbnail" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/userNameHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginStart="5dp"
                android:gravity="start">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/user_name_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"

                 />

            <TextView
                android:id="@+id/user_usernames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/myusername_placeholder"
                android:textSize="14sp"
                android:layout_marginStart="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/user_twit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/twit_text_placeholder"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/userNameHolder"/>

            <ImageView
                android:id="@+id/twit_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_thumbnail"
                android:gravity="center_vertical"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:visibility="gone"
                android:scaleType="fitCenter"
                android:layout_below="@id/user_twit_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/twit_img"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/comment_icon"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_weight="1"
                    android:src="@drawable/retweet_icon"/>

                <LinearLayout
                    android:id="@+id/twit_like_container"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1">

                <ImageView
                    android:id="@+id/twit_like"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:src="@drawable/like_unselected_icon"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>